<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchWorkList"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemInProgress"
        android:title="@string/work_in_progress" />
    <item
        android:id="@+id/itemInPending"
        android:title="@string/work_pending" />
    <item
        android:id="@+id/itemCompleted"
        android:title="@string/work_completed" />
    <item
        android:id="@+id/itemAll"
        android:title="@string/work_all" />
</menu>